2025-09-03T01:52:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17420705337 # 1199
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-03
* notice: last 14d: unq all: 14 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1180 5820 / 1196 5868
* notice: next accum: outdated-unq outdated-all / unq all: 1183 5834 / 1198 5870
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2025-08-19] / [2025-09-02]

2025-09-02T12:53:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17404135213 # 1198
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-02
* notice: last 14d: unq all: 13 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1180 5820 / 1195 5867
* notice: next accum: outdated-unq outdated-all / unq all: 1180 5820 / 1196 5868
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -13 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-19 2025-09-02]

2025-09-01T12:54:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17378238065 # 1196
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-01
* notice: last 14d: unq all: 13 47
* notice: prev accum: outdated-unq outdated-all / unq all: 1178 5818 / 1195 5867
* notice: next accum: outdated-unq outdated-all / unq all: 1180 5820 / 1195 5867
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-18] / []

2025-09-01T02:20:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17365856745 # 1195