@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-03T01:52:14Z",
+  "timestamp" : "2025-09-03T12:51:13Z",
   "count_outdated" : 5834,
   "uniques_outdated" : 1183,
-  "count" : 5870,
-  "uniques" : 1198,
+  "count" : 5874,
+  "uniques" : 1199,
   "views" : [
     {
       "timestamp": "2025-08-21T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-09-03T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
