@@ -1,6 +1,6 @@
 {
-  "count": 36,
-  "uniques": 14,
+  "count": 40,
+  "uniques": 15,
   "views": [
     {
       "timestamp": "2025-08-21T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2025-09-02T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-09-03T00:00:00Z",
+      "count": 4,
+      "uniques": 1
     }
   ]
 }
